# poetry2nix

tests/: default.nix
tests/dependency-markers/: pyproject.toml
