[tool.poetry]
name = "markers"
version = "0.0.0"
description = "Markers test"
authors = []

[tool.poetry.dependencies]
python = ">=3.7"

[[tool.poetry.dependencies.open3d]]
version = "0.16.1"
markers = "sys_platform == 'darwin'"

[[tool.poetry.dependencies.open3d]]
version = "0.16.0"
markers = "sys_platform != 'darwin'"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
